# mw-ps3

./: Makefile.am  README  ps3.c  ps3dev.c  ps3dev.h
utils/: README  bridge  mw-ps3.sh  mw-ps3.start
